# lotto_cli_generator

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/utils/: mod.rs
