[package]
name = "lotto_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
rand = "0.8.4"
chrono = { version = "0.4.26", features = ["unstable-locales"] }